TASK-3: Add secret application file props

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,4 +1,4 @@
-JIRA_HOME_PAGE=JiraRush Home page {0}
+JIRA_HOME_PAGE=JiraRush Home page
 LOGOUT=Logout
 JIRA_RUSH_EMAIL_CONFIRMATION=JiraRush - email confirmation
 JIRA_RUSH_EMAIL_CONFIRMATION_TEXT=To complete the account setup and start using JiraRush, confirm that you have entered your account correctly email address.
